--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,9 +3,8 @@
    <application
         android:label="medme"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
-
-        <!-- TODO: Add your Google Maps API key here -->
+        android:icon="@mipmap/ic_launcher"
+        android:requestLegacyExternalStorage="true">        <!-- TODO: Add your Google Maps API key here -->
         <meta-data android:name="com.google.android.geo.API_KEY"
                android:value="AIzaSyBf1X9B4UwLQTNNm_nxM2IVeIqpIMlKOGE"/>
         <activity
